# aklab_imaging

./: .gitignore  README.md  pyproject.toml
examples/: analyse.ipynb  get spectra.ipynb  grating.ipynb  wavlength_hint.ipynb
src/aklab_imaging/: FLI.py  __init__.py  data_view.py  imaging_tools.py  spectrometer.py  textcolor.py  thr640.py  wavlength_hint.ipynb
